[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/main/HUD.gd" id="1_4zv1d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxTopBar"]
bg_color = Color(0.05, 0.02, 0.08, 0.85)
border_color = Color(0.8, 0.6, 1, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6
shadow_color = Color(0.2, 0.1, 0.4, 0.6)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxCenterPanel"]
bg_color = Color(0.08, 0.04, 0.12, 0.9)
border_color = Color(0.9, 0.5, 1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8
shadow_color = Color(0.3, 0.1, 0.5, 0.8)
shadow_size = 12

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource("1_4zv1d")

[node name="Popups" type="VBoxContainer" parent="."]
offset_left = -80.0
offset_top = 18.0
offset_right = 80.0
offset_bottom = 18.0
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
theme_override_constants/separation = 4

[node name="TopBar" type="MarginContainer" parent="."]
offset_right = 320.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxTopBar")

[node name="HBox" type="HBoxContainer" parent="TopBar"]
offset_left = 4.0
offset_top = 2.0
offset_right = 316.0
offset_bottom = 14.0
theme_override_constants/separation = 8

[node name="ScoreLabel" type="Label" parent="TopBar/HBox"]
text = "Score: 0"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(1, 0.9, 0.7, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.2, 0.1, 0.8)
theme_override_constants/outline_size = 1

[node name="LivesLabel" type="Label" parent="TopBar/HBox"]
text = "Lives: ♥♥♥"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.4, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.8, 0.1, 0.3, 0.9)
theme_override_constants/outline_size = 2

[node name="TPSLabel" type="Label" parent="TopBar/HBox"]
text = "TPS: 50"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.3, 0.5, 0.8)
theme_override_constants/outline_size = 1

[node name="BombsLabel" type="Label" parent="TopBar/HBox"]
text = "Bombs: 3"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.9, 1, 0.7, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.5, 0.1, 0.8)
theme_override_constants/outline_size = 1



[node name="CenterOverlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="OverlayDim" type="ColorRect" parent="CenterOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(0, 0, 0, 0.45)
visible = false

[node name="MessagePanel" type="PanelContainer" parent="CenterOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -30.0
offset_right = 120.0
offset_bottom = 30.0
theme_override_styles/panel = SubResource("StyleBoxCenterPanel")
visible = false

[node name="VBox" type="VBoxContainer" parent="CenterOverlay/MessagePanel"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 6

[node name="MessageLabel" type="Label" parent="CenterOverlay/MessagePanel/VBox"]
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.7, 0.9, 1)
theme_override_colors/font_outline_color = Color(0.8, 0.2, 0.6, 0.9)
theme_override_constants/outline_size = 4

[node name="HintLabel" type="Label" parent="CenterOverlay/MessagePanel/VBox"]
text = "Press Enter to restart"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.9, 0.8, 1, 0.9)
theme_override_colors/font_outline_color = Color(0.4, 0.2, 0.6, 0.8)
theme_override_constants/outline_size = 1


